--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -8,7 +8,7 @@
 
 .inner {
     height: 80%;
-    margin: 10rem 1rem 0 1rem;
+    margin: 5rem 1rem 0 1rem;
     color: white;
     text-align: center;
 }
@@ -18,4 +18,41 @@
     height: 7rem;
     background-color: #fff;
     border-radius: 50%;
+}
+
+.links {
+    margin-top: 8rem;
+}
+
+.link{
+    margin-top: 5rem;
+}
+
+.link a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.5rem;
+}
+
+.contact {
+    margin-bottom: 1rem;
+    margin-left: 1rem;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    display: inline-flex;
+}
+
+.email-ico {
+    width: 2.5rem;
+    height: 2.5rem;
+    background-color: #fff;
+    border-radius: 50%;
+}
+
+.contact a {
+    margin: .5rem 0 0 .5rem;
+    text-decoration: none;
+    color: #fff;
+    font-size: 1.5rem;
 }
