--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -143,7 +143,12 @@ a {
 
     .outer {
         flex-direction: column;
-        align-items: start;
+        align-items: flex-start;
+        width: 100%;
+    }
+
+    .inner {
+        margin: 1rem 0;
     }
 
     .open {
@@ -155,7 +160,7 @@ a {
         flex-direction: column;
         text-align: center;
         width: 100%;
-        margin-bottom: 0.25rem;
+        margin: 0.25rem 0;
         background-color: rgb(238, 234, 234);
         margin: 0.2rem 0.5rem;
         margin-right: 2rem;
@@ -164,5 +169,6 @@ a {
 
     .link {
         font-size: 1rem;
+        margin: 0.25rem 0;
     }
 }
