--- a/src/css/about.css
+++ b/src/css/about.css
@@ -7,30 +7,38 @@
 
 .abt-propic {
     font-size: 2rem;
-    color: #ece5e5;
+    color: #e2e20b;
     text-align: center;
     padding-right: 2rem;
-    margin-left: 10rem;
+    margin: 5rem 0 0 10rem;
+    /* background: rgb(74, 78, 63);
+    background: linear-gradient(180deg, rgba(74, 78, 63, 1) 3%, rgba(79, 79, 63, 1) 44%, rgba(183, 186, 173, 1) 86%); */
+    border-radius: 2%;
 }
 
-.abt-propic img{
-    margin: 2rem 0 0 4rem;  
+.abt-propic img {
+    margin: 2rem 0 0 4rem;
     width: 15rem;
     height: 15rem;
     border-radius: 50%;
 }
 
-.abt-propic h5{
+.abt-propic h5 {
     margin: 0;
+    font-size: 3rem;
+    margin-top: 4rem;
     margin-left: 3.5rem;
+    font-family: 'jholfont';
 }
 
-.abt-propic h6{
+.abt-propic h6 {
     margin: 0;
     margin-left: 4rem;
+    font-size: 1.5rem;
+    font-family: 'jedifont';
 }
 
-.abt-information{
+.abt-information {
     height: 100%;
     margin: 8rem 10rem 0 5rem;
     width: 100%;
@@ -39,30 +47,95 @@
     text-align: center;
 }
 
-.abt-information p{
+.abt-information p {
     margin: 0 4rem 1rem 5rem;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     color: #fff;
     font-family: 'sebino';
     text-align: center;
 }
 
-.abt-information h3{
-    margin: 4rem 0 0 0;
+.abt-cards {
+    margin-top: 2rem;
+    display: flex;
 }
 
-.abt-summary {
-    color: #ffc909;
-    display: inline-flex;
-    width: 50%;
+.abt-card {
+    background: rgb(74, 78, 63);
+    background: linear-gradient(180deg, rgba(74, 78, 63, 1) 3%, rgba(79, 79, 63, 1) 44%, rgba(183, 186, 173, 1) 95%);
+    height: 25rem;
+    width: 25%;
+    margin-left: 2rem;
+    border-radius: 3%;
 }
 
-.abt-summary h6{
-    margin-left: 15rem;
-    margin-right: 1rem;
+.abt-card:hover {
+    background: rgb(185, 185, 117);
+    height: 26rem;
+    color: #ff3300;
+}
+
+.abt-card h3 {
+    margin-top: 12rem;
+    font-family: 'jedifont';
 }
 
 @font-face {
     font-family: 'sebino';
     src: url('../assets//fonts/sebino-medium.ttf');
+}
+
+@media(max-width: 1500px) {
+    .abt-propic {
+        font-size: 1.5rem;
+        margin: 5rem 0 0 5rem;
+    }
+
+    .abt-propic img {
+        width: 10rem;
+        height: 10rem;
+    }
+
+    .abt-card {
+        height: 25rem;
+    }
+
+    .abt-card h3 {
+        margin-top: 10rem;
+        font-family: 'jedifont';
+        font-size: 1.5rem;
+    }
+    
+}
+
+@media(max-width: 1400px) {
+    .abt-information {
+        margin: 5rem 7rem 0 3rem;
+    }
+    .abt-information p {
+        margin: 0 4rem 1rem 4rem;
+        font-size: 1.1rem;
+    }
+    .abt-card {
+        height: 20rem;
+        margin-left: 1rem;
+    }
+    .abt-card h3 {
+        margin-top: 8rem;
+        font-family: 'jedifont';
+        font-size: 1.2rem;
+    }
+    
+}
+
+@media(max-width: 1100px) {
+    .about-page {
+        display: block;
+        overflow: visible;
+    }
+
+    .abt-information {
+        padding: 0;
+        margin: 0;
+    }
 }
