--- a/src/css/about.css
+++ b/src/css/about.css
@@ -62,7 +62,7 @@
 
 .abt-card {
     background: rgb(74, 78, 63);
-    background: linear-gradient(180deg, rgba(74, 78, 63, 1) 3%, rgba(79, 79, 63, 1) 44%, rgba(183, 186, 173, 1) 95%);
+    background: linear-gradient(180deg, rgb(63, 66, 78) 3%, rgb(63, 69, 79) 44%, rgba(183, 186, 173, 1) 95%);
     height: 25rem;
     width: 25%;
     margin-left: 2rem;
